--- a/choose-language.html
+++ b/choose-language.html
@@ -24,19 +24,19 @@
 </head>
 <body>
 <div class="language-choose">
-    <div class="container">
+    <div class="container mb-md-0 mb-5">
         <div class="col-12">
             <p class="language-choose-title">TILNI TANLANG / ВЫБЕРИТЕ ЯЗЫК</p>
         </div>
 
         <div class="d-flex justify-content-center align-items-center flex-xl-nowrap flex-wrap mt-4 ">
-            <div class="col-xl-3 mb-5 mb-xl-0 mr-xl-5 px-0 text-center">
+            <div class="col-xl-3 col-8 mb-3 mb-xl-0 mr-xl-5 px-0 text-center">
                 <a href="#" class="btn white-button w-100">O`zbekcha</a>
             </div>
-            <div class="col-xl-3 mb-5 mb-xl-0 mr-xl-5 px-0 text-center">
+            <div class="col-xl-3 col-8 mb-3 mb-xl-0 mr-xl-5 px-0 text-center">
                 <a href="#" class="btn white-button w-100">Русский</a>
             </div>
-            <div class="col-xl-3 px-0 text-center">
+            <div class="col-xl-3 col-8 px-0 text-center">
                 <a href="#" class="btn white-button w-100">Ўзбекча</a>
             </div>
         </div>
